lists items gap fixed

--- a/styles/new-me.css
+++ b/styles/new-me.css
@@ -65,8 +65,7 @@ ul {
   font-size: 16px;
   list-style: none;
   margin: 0;
-}
-.checklist {
+  padding: 0;
 }
 
 i {
